--- a/app/src/main/res/layout/administrador_editar_materia.xml
+++ b/app/src/main/res/layout/administrador_editar_materia.xml
@@ -5,70 +5,102 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".Administrador.ActualizarMateria"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+    <ImageView
+        android:id="@+id/btn_back"
+        android:layout_width="50dp"
+        android:layout_height="44dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.085"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.023"
+        app:srcCompat="@drawable/back_arrow" />
+
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="¡Menú de edición!"
+        android:textColor="#000000"
+        android:textSize="25sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.44"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.074" />
+        app:layout_constraintVertical_bias="0.107" />
 
     <EditText
         android:id="@+id/txtNombreEditarMateria"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:hint="Nombre de la asignatura"
+        android:layout_width="288dp"
+        android:layout_height="59dp"
+        android:background="@drawable/edittext_rounded_bg"
         android:ems="10"
         android:inputType="text"
+        android:paddingStart="11dp"
+        android:paddingTop="11dp"
+        android:paddingEnd="11dp"
+        android:paddingBottom="11dp"
         android:text=""
-        android:hint="Nombre de la asignatura"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintHorizontal_bias="0.43"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.183" />
+        app:layout_constraintVertical_bias="0.241" />
 
     <EditText
         android:id="@+id/txtEditarDescripcionMateria"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="text"
-        android:text=""
+        android:layout_width="290dp"
+        android:layout_height="153dp"
         android:hint="Descripción"
+        android:background="@drawable/edittext_rounded_bg_large_input_box"
+        android:ems="10"
+        android:inputType="textMultiLine"
+        android:paddingStart="11dp"
+        android:paddingTop="0dp"
+        android:paddingEnd="11dp"
+        android:paddingBottom="11dp"
+        android:text=""
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.492"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.287" />
+        app:layout_constraintVertical_bias="0.427" />
 
     <Button
         android:id="@+id/btnEditarMateria"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Editar"
+        android:backgroundTint="#11DB25"
+        android:text="✓"
+        android:textSize="20sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.748"
+        app:layout_constraintHorizontal_bias="0.724"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.573" />
+        app:layout_constraintVertical_bias="0.815" />
 
     <Button
         android:id="@+id/btnEliminarMateria"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Borrar"
+        android:backgroundTint="#DB1111"
+        android:textSize="20sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.299"
+        app:layout_constraintHorizontal_bias="0.275"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.573" />
+        app:layout_constraintVertical_bias="0.815" />
 
     <TextView
         android:id="@+id/editarColorTxt"
@@ -78,7 +110,7 @@
         android:textColor="@color/black"
         android:textSize="32sp"
         android:textStyle="bold"
-        android:visibility="visible"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.492"
@@ -91,20 +123,24 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Selecciona un color"
+        android:backgroundTint="#E8E8E8"
+        android:drawableRight="@drawable/colorpickerimage1"
+        android:textColor="#8B7A7A"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintHorizontal_bias="0.45"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.418" />
+        app:layout_constraintVertical_bias="0.66"/>
 
     <TextView
         android:id="@+id/referenciaActualizarID"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Referencia"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
