--- a/app/src/main/res/layout/item_materia.xml
+++ b/app/src/main/res/layout/item_materia.xml
@@ -2,74 +2,89 @@
 <androidx.cardview.widget.CardView android:id="@+id/card_view_ticket"
     android:clickable="true"
     android:focusable="true"
-    android:foreground="?android:attr/selectableItemBackground"
+    android:foreground="@drawable/fondo_transparente"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="200dp"
-    android:layout_height="200dp"
+    android:layout_width="300dp"
+    android:layout_height="140dp"
     android:layout_margin="12dp"
     android:padding="4dp"
-    card_view:cardBackGroudColor="#FFFFFF"
-    card_view:cardCornerRadius="20dp"
+    card_view:cardBackGroudColor="#000000"
     card_view:cardElevation="6dp"
     card_view:contentPaddind="4dp"
     app:cardUseCompatPadding="true"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:card_view="http://schemas.android.com/tools">
-
+    xmlns:card_view="http://schemas.android.com/tools"
+    >
+    <LinearLayout
+        android:id="@+id/colorMateriaLayout"
+        android:layout_width="300dp"
+        android:layout_height="20dp"
+        android:layout_marginTop="100dp"
+        android:background="@color/black"
+        android:orientation="vertical"/>
     <RelativeLayout
         android:id="@+id/MateriaLayout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="100dp"
+        android:background="#D9D9D9"
         android:padding="16dp">
+
         <LinearLayout
             android:id="@+id/nombreMateriaLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
             <!--Nombre materia-->
-            <TextView
-                android:id="@+id/nombreMateriaCardID"
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="wrap_content"
-                android:text="Materia" />
         </LinearLayout>
 
         <LinearLayout
             android:id="@+id/botonesLayout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_width="300dp"
+            android:layout_height="80dp"
+            android:gravity="center_vertical"
             android:orientation="horizontal"
-            android:paddingTop="30dp"
-            android:paddingLeft="40dp">
+            android:paddingLeft="40dp"
+            android:paddingTop="30dp">
             <!--Botones-->
-            <Button
-                android:id="@+id/btnEditarMateria"
-                android:layout_width="wrap_content"
+
+            <TextView
+                android:id="@+id/nombreMateriaCardID"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="Editar" />
+                android:layout_marginBottom="12dp"
+                android:layout_marginLeft="50dp"
+                android:layout_weight="1"
+                android:textSize="24sp"
+                android:textStyle="bold"
+                android:text="Materia" />
+
             <TextView
                 android:id="@+id/referenciaMateriaCardID"
-                android:visibility="gone"
                 android:layout_width="0dp"
-                android:layout_weight="1"
                 android:layout_height="wrap_content"
-                android:text="" />
+                android:layout_weight="1"
+                android:text=""
+                android:visibility="gone" />
+
             <TextView
                 android:id="@+id/descripcionMateriaCardID"
-                android:visibility="gone"
                 android:layout_width="0dp"
-                android:layout_weight="1"
                 android:layout_height="wrap_content"
-                android:text="" />
+                android:layout_weight="1"
+                android:text=""
+                android:visibility="gone" />
+
         </LinearLayout>
-        <LinearLayout
-            android:id="@+id/colorMateriaLayout"
-            android:layout_width="200dp"
+
+        <Button
+            android:id="@+id/btnEditarMateria"
+            android:layout_width="20dp"
             android:layout_height="20dp"
-            android:orientation="vertical"
-            android:layout_marginTop="100dp"
-            android:background="@color/black">
-        </LinearLayout>
+            android:layout_marginLeft="230dp"
+            android:background="@drawable/lapiz_edicion"
+            android:text="" />
+
     </RelativeLayout>
+
+
 </androidx.cardview.widget.CardView>
