--- a/app/src/main/res/layout/item_termino.xml
+++ b/app/src/main/res/layout/item_termino.xml
@@ -2,14 +2,13 @@
 <androidx.cardview.widget.CardView android:id="@+id/card_view_termino"
     android:clickable="true"
     android:focusable="true"
-    android:foreground="?android:attr/selectableItemBackground"
+    android:foreground="@drawable/fondo_transparente"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="200dp"
-    android:layout_height="200dp"
+    android:layout_width="300dp"
+    android:layout_height="250dp"
     android:layout_margin="12dp"
     android:padding="4dp"
     card_view:cardBackGroudColor="#FFFFFF"
-    card_view:cardCornerRadius="20dp"
     card_view:cardElevation="6dp"
     card_view:contentPaddind="4dp"
     app:cardUseCompatPadding="true"
@@ -32,18 +31,24 @@
                 android:layout_width="0dp"
                 android:layout_weight="1"
                 android:layout_height="wrap_content"
-                android:text="Materia" />
+                android:layout_marginLeft="65dp"
+                android:text="Termino"
+                android:textSize="24sp"
+                android:textStyle="bold"
+                />
         </LinearLayout>
         <LinearLayout
             android:id="@+id/imagenTerminoLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:layout_marginTop="60dp">
             <!--Imagen termino termino-->
             <ImageView
                 android:id="@+id/imagenTerminoCardID"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="150dp"
+                android:layout_height="150dp"
+                android:layout_marginLeft="50dp"
                 />
 
         </LinearLayout>
@@ -55,12 +60,7 @@
             android:orientation="horizontal"
             android:paddingTop="30dp"
             android:paddingLeft="40dp">
-            <!--Botones-->
-            <Button
-                android:id="@+id/btnEditarTermino"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Editar" />
+
             <TextView
                 android:id="@+id/referenciaTerminoCardID"
                 android:visibility="gone"
@@ -83,5 +83,13 @@
                 android:layout_height="wrap_content"
                 android:text="" />
         </LinearLayout>
+        <!--Botones-->
+        <Button
+            android:id="@+id/btnEditarTermino"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_marginLeft="230dp"
+            android:background="@drawable/lapiz_edicion"
+            android:text="" />
     </RelativeLayout>
 </androidx.cardview.widget.CardView>
